# diplom

./: .gitignore  CMakeLists.txt  main.cpp
include/: finder_Lines.hpp  hough.h  main.hpp  ransac.h
libs/: HSV.cpp  adaptive_binarization.cpp  canny.cpp  hough.cpp  optic_flow.cpp  ransac.cpp  unet.cpp
razmetka_dannih/: razmetka.py
res/: adaptive_parameters.yaml  canny_parameters.yaml  hough_parameters.yaml  hsv_parameters.yaml  optical_flow_parameters.yaml  ransac_parameters.yaml
ten_img_for_diplom/: CMakeLists.txt  main.cpp
